# esoteric-ai-protocol

./: .gitignore  LICENSE  README.md  pyproject.toml
src/eap/: __init__.py  cli.py  codec.py  meter.py  packet.py
tests/: test_codec.py  test_meter.py  test_packet.py
